@@ -48,7 +48,7 @@
 				  - Eine der folgenden Datenbanken (Dabei unterst&uuml;tze PHP-Erweiterungen):<br />
 					-- MySQL ab 4.0 (mysql, mysqli, pdo_mysql)<br />
 					-- PostgreSQL ab 8.1 (pgsql, pdo_pgsql)<br />
-					-- SQLite ab 3.0 (pdo_sqlite)<br />
+					-- SQLite ab 3.0 (sqlite3, pdo_sqlite)<br />
           -- Microsoft SQL Server ab 2005 (sqlsrv)
 		  </td></tr>
 	 	</table>
